# IPC-Chat-Service

./: CMakeLists.txt  README  channels.cfg  groups.cfg  klient.c  klient.h  serwer.c  serwer.h
